<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/regPageLogo"
        android:layout_width="251dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/login_logo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_page_logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@color/likeBtnGray"
        android:textColorLink="@color/likeBtnAccent" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/likeBtnGray"
        android:textColorLink="@color/likeBtnAccent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_reg_btn"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="29dp"
        android:background="@color/colorAccent"
        android:text="@string/login_btn_text"
        android:textColor="@color/whiteTransparentHalf"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorAccent"
        android:onClick="onButtonClick"
        android:text="@string/login_reg_btn_text"
        android:textColor="@color/whiteTransparentHalf"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:indeterminate="true"
        tools:visibility="invisible" />


</RelativeLayout>